# modelo_rapido_djavue

./: .env.example  Dockerfile  README.md  docker-compose.yml  project.sh  pyproject.toml
backend/: .env.example  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
backend/core/: urls.py
backend/project/: settings.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: default.js  helloWorld.js
frontend/src/api/configs/: default-config.js
frontend/src/components/: HelloWorld.vue
